# aoe4-discord

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.expose.yaml  docker-compose.yaml  init-db.sql  pyproject.toml
.github/workflows/: build-image.yaml
aoe4_discord/: __init__.py  bot.py  client.py  consts.py  db.py  main.py  models.py  server.py  stats.py
example_payloads/: game_summary.json
server/: docker-compose.yaml
